# eq_microservice_api

./: .gitignore  README.md  bd.sql  bdLogic.py  main.db  main.py  pyproject.toml
app/: create_pictures.py  crud.py  database.py  earthquakeplotlib.py  main.py  models.py  schemas.py
app/database/: main.db  newdb.db  test.db  test2.db
app/modules/: file_storage.py  helper.py  responses.py
app/test/: test_crud.py  test_main.py  test_new_db_logic.py
database/: bd.sql  main.db  newbd.db  newbd.sql
modules/: FileStorage.py  bdLogic.py  connect_db.py  db_logic.py  new_db_logic.py  responses.py  security.py
test/: new_db_logic.py  test_new_db_logic.py
