[tool.poetry]
name = "eq-microservice-api"
version = "0.1.0"
description = ""
authors = ["vladnov138, nech14"]
license = "MIT"
readme = "README.md"
packages = [{include = "eq_microservice_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
pydantic = "^1.10.9"
SQLAlchemy = "^2.0.16"
uvicorn = "^0.22.0"
pytest-cov = "^4.1.0"
loguru = "^0.7.0"
httpx = "^0.24.1"
pillow = "^9.5.0"
numpy = "^1.25.0"
vesninlib = {path = "app/lib/vesninlib-1.1.tar"}
pyproj = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
